MANVIR SANDBOX/src/objects/Bid__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Bids</relationshipLabel>
        <relationshipName>Bid</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Bid</label>
    <nameField>
        <label>Bid Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>